plugins {
    id 'java'
}

group 'com.simplecontainers'
version '1.0-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_17

repositories {
    mavenCentral()
}

dependencies {
    implementation group: 'org.testcontainers', name: 'testcontainers', version: testcontainers_version
    implementation group: 'org.testcontainers', name: 'postgresql', version: testcontainers_version
    implementation group: 'org.apache.activemq', name: 'activemq-client', version: activemq_version
    implementation group: 'com.datastax.oss', name: 'java-driver-core', version: cassandra_version
    implementation group: 'org.apache.kafka', name: 'kafka-clients', version: kafka_client_version
    implementation group: 'org.testcontainers', name: 'kafka', version: testcontainers_version
    implementation group: 'org.postgresql', name: 'postgresql', version: postgres_driver_version
    implementation group: 'redis.clients', name: 'jedis', version: redis_client_version
    implementation group: 'com.zaxxer', name: 'HikariCP', version: hikari_version

    testImplementation group: 'io.rest-assured', name: 'rest-assured', version: rest_assured_version
    testImplementation group: 'junit', name: 'junit', version: junit_version
}

tasks.withType(Test) {
    testLogging {
        events "passed", "started", "skipped", "failed"
    }
}
